--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="icon" href="../img/j.png">
+    <link rel="icon" href="./assets/j.png">
     <link rel="stylesheet" href="./estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,11 +21,6 @@
                 </li>
                 <li class="nav__item">
                     <a href="#el" class="nav__link">Para Él</a>
-                </li>
-                <li class="nav__item nav__item--portafolio">
-                    <a href="../index.html" class="nav__link nav__cta--portafolio">
-                        <button class="nav__button">Portafolio</button>
-                    </a>
                 </li>
             </ul>
             <img src="./assets/bx-menu.svg" alt="imagen_menu" class="nav__menu">
